--- a/KeY4Eclipse/src/utilities/org.key_project.key4eclipse.development_utilities/.classpath
+++ b/KeY4Eclipse/src/utilities/org.key_project.key4eclipse.development_utilities/.classpath
@@ -2,6 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.key_project.ui"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
