--- a/key/key.core/build.gradle
+++ b/key/key.core/build.gradle
@@ -163,5 +163,7 @@ task debugLexer(type: JavaExec) {
     standardInput = System.in
 }
 
+task ptest(type: Test) { group "verification"}
+
 // @AW: Delete? weigl: depends: If want that gradle check validates everything then not.
 // check.dependsOn << testProofRules << testRunAllProofs
