--- a/key/build.gradle
+++ b/key/build.gradle
@@ -21,6 +21,8 @@ plugins {
     //Generates reports on the license of used packages: Task `downloadLicenses'
     //Some Licenses requires an entry in the credits (MIT, BSD)
     id "com.github.hierynomus.license-report" version "0.15.0"
+
+    id "org.sonarqube" version "3.0"
 }
 
 // Configure this project for use inside IntelliJ:
@@ -50,6 +52,14 @@ def build = System.env.BUILD_NUMBER == null ? "" : "-${System.env.BUILD_NUMBER}"
 
 group = "org.key_project"
 version = "2.7$build"
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "key-main"
+        property "sonar.organization", "keyproject"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
 
 subprojects {
     apply plugin: "java"
