--- a/KeY4Eclipse/src/plugins/org.key_project.ui/build.properties
+++ b/KeY4Eclipse/src/plugins/org.key_project.ui/build.properties
@@ -5,4 +5,14 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                about.html,\
-               about_files/
+               about_files/,\
+               ext.lib/commonmark-0.15.2.jar,\
+               ext.lib/commonmark-ext-gfm-tables-0.15.2.jar,\
+               ext.lib/miglayout-core-5.2.jar,\
+               ext.lib/miglayout-swing-5.2.jar,\
+               key.ui.lib/docking-frames-common.jar,\
+               key.ui.lib/docking-frames-core.jar,\
+               key.ui.lib/docking-frames-ext-toolbar-common.jar,\
+               key.ui.lib/docking-frames-ext-toolbar.jar,\
+               ext.lib/key.ui-2.8.0.jar,\
+               ext.lib/keyext.interactionlog-2.8.0.jar
