--- a/KeY4Eclipse/src/plugins/org.key_project.core/build.properties
+++ b/KeY4Eclipse/src/plugins/org.key_project.core/build.properties
@@ -14,4 +14,5 @@ bin.includes = META-INF/,\
                key.lib/Antlr.License.txt,\
                key.lib/LGPL.txt,\
                key.lib/README.txt,\
-               plugin.xml
+               plugin.xml,\
+               key.dist.lib/key.core-2.8.0.jar
