--- a/KeY4Eclipse/src/plugins/org.key_project.ui/.project
+++ b/KeY4Eclipse/src/plugins/org.key_project.ui/.project
@@ -27,6 +27,11 @@
 	</natures>
 	<linkedResources>
 		<link>
+			<name>ext.lib</name>
+			<type>2</type>
+			<locationURI>PARENT-4-PROJECT_LOC/key/key.ui/build/distributions/key-2.8.0/lib</locationURI>
+		</link>
+		<link>
 			<name>key.examples</name>
 			<type>2</type>
 			<locationURI>$%7BPARENT-4-PROJECT_LOC%7D/key/key.ui/examples</locationURI>
@@ -35,11 +40,6 @@
 			<name>key.resources</name>
 			<type>2</type>
 			<locationURI>$%7BPARENT-4-PROJECT_LOC%7D/key/key.ui/src/main/resources</locationURI>
-		</link>
-		<link>
-			<name>key.src</name>
-			<type>2</type>
-			<locationURI>$%7BPARENT-4-PROJECT_LOC%7D/key/key.ui/src/main/java</locationURI>
 		</link>
 		<link>
 			<name>key.ui.lib</name>
