Clean up of library paths to key-xxx jar files

--- a/KeY4Eclipse/src/plugins/org.key_project.core/build.properties
+++ b/KeY4Eclipse/src/plugins/org.key_project.core/build.properties
@@ -9,10 +9,12 @@ bin.includes = META-INF/,\
                about_files/,\
                icons/,\
                about.ini,\
-               key.lib/antlr.jar,\
-               key.lib/recoderKey.jar,\
                key.lib/Antlr.License.txt,\
                key.lib/LGPL.txt,\
                key.lib/README.txt,\
                plugin.xml,\
-               key.dist.lib/key.core-2.8.0.jar
+               key.dist.lib/key.core-2.8.0.jar,\
+               key.dist.lib/antlr-2.7.7.jar,\
+               key.dist.lib/antlr-3.5.2.jar,\
+               key.dist.lib/antlr-runtime-3.5.2.jar,\
+               key.dist.lib/recoderKey.jar
