--- a/KeY4Eclipse/src/plugins/org.key_project.core/.classpath
+++ b/KeY4Eclipse/src/plugins/org.key_project.core/.classpath
@@ -1,15 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/antlr-2.7.7.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/antlr-3.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/antlr-runtime-3.5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/recoderKey.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/key.core-2.8.0.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="main"/>
-	<classpathentry kind="src" path="java"/>
-	<classpathentry kind="src" path="javaccGen"/>
-	<classpathentry exported="true" kind="lib" path="key.lib/antlr.jar"/>
-	<classpathentry exported="true" kind="lib" path="key.lib/recoderKey.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Users/bubel/.gradle/caches/modules-2/files-2.1/org.jetbrains/annotations/20.1.0/2fcd1f3225bca0c4a7bc931142076f8c1e80993f/annotations-20.1.0.jar" sourcepath="/Users/bubel/.gradle/caches/modules-2/files-2.1/org.jetbrains/annotations/20.1.0/ffdf5f82454276113cc294e557017ad5fe2d4015/annotations-20.1.0-sources.jar">
+		<attributes>
+			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
