--- a/KeY4Eclipse/src/plugins/org.key_project.ui/.classpath
+++ b/KeY4Eclipse/src/plugins/org.key_project.ui/.classpath
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="key.src"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/rifl"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="/rifl"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/commonmark-0.15.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/commonmark-ext-gfm-tables-0.15.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/docking-frames-common.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/docking-frames-core.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/key.ui-2.8.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/keyext.interactionlog-2.8.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/miglayout-core-5.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="key.dist.lib/miglayout-swing-5.2.jar"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="lib" path="key.ui.lib/docking-frames-common.jar"/>
-	<classpathentry kind="lib" path="key.ui.lib/docking-frames-core.jar"/>
-	<classpathentry kind="lib" path="key.ui.lib/docking-frames-ext-toolbar-common.jar"/>
-	<classpathentry kind="lib" path="key.ui.lib/docking-frames-ext-toolbar.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
