--- a/KeY4Eclipse/src/plugins/org.key_project.ui/build.properties
+++ b/KeY4Eclipse/src/plugins/org.key_project.ui/build.properties
@@ -6,13 +6,11 @@ bin.includes = META-INF/,\
                .,\
                about.html,\
                about_files/,\
-               ext.lib/commonmark-0.15.2.jar,\
-               ext.lib/commonmark-ext-gfm-tables-0.15.2.jar,\
-               ext.lib/miglayout-core-5.2.jar,\
-               ext.lib/miglayout-swing-5.2.jar,\
-               key.ui.lib/docking-frames-common.jar,\
-               key.ui.lib/docking-frames-core.jar,\
-               key.ui.lib/docking-frames-ext-toolbar-common.jar,\
-               key.ui.lib/docking-frames-ext-toolbar.jar,\
-               ext.lib/key.ui-2.8.0.jar,\
-               ext.lib/keyext.interactionlog-2.8.0.jar
+               key.dist.lib/commonmark-0.15.2.jar,\
+               key.dist.lib/commonmark-ext-gfm-tables-0.15.2.jar,\
+               key.dist.lib/miglayout-core-5.2.jar,\
+               key.dist.lib/miglayout-swing-5.2.jar,\
+               key.dist.lib/key.ui-2.8.0.jar,\
+               key.dist.lib/keyext.interactionlog-2.8.0.jar,\
+               key.dist.lib/docking-frames-common.jar,\
+               key.dist.lib/docking-frames-core.jar
