--- a/key/key.core/build.gradle
+++ b/key/key.core/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 dependencies {
     compile project(':key.util')
-    compile name: 'recoderKey'
+    compile group: group, name: 'recoderkey', version: '1.0'
     compile group: 'net.java.dev.javacc', name:'javacc', version:'4.0'
     compile group: 'org.antlr', name:'antlr-runtime', version:'3.5.2'
     compile group: 'antlr', name: 'antlr', version: '2.7.7'
@@ -39,7 +39,7 @@ compileJavacc {
     doLast {
         // Some manual overwriting of Token files needed
         copy {
-            from("src/main/javacc/de/uka/ilkd/key/parser/schemajava/Token.java")
+            from("src/main/javacc/de/uka/ilkd//parser/schemajava/Token.java")
             into "$javaCCOutputDirMain/de/uka/ilkd/key/parser/schemajava/"
         }
         copy {
