--- a/key/build.gradle
+++ b/key/build.gradle
@@ -231,12 +231,20 @@ subprojects {
         }
         repositories {
             maven {
-                name = "GitHubPackages"
-                url = uri("https://maven.pkg.github.com/KeYProject/key")
-                credentials {
+                name = "GitlabPackages"
+                //url = uri("https://maven.pkg.github.com/KeYProject/key")
+		url "https://git.key-project.org/api/v4/projects/35/packages/maven"
+		credentials(HttpHeaderCredentials) {
+			name = 'Private-Token'
+			value = System.getenv("TOKEN")
+		}
+		authentication {
+			header(HttpHeaderAuthentication)
+		}
+                /*credentials {
                     username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                     password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
-                }
+                }*/
             }
         }
     }
