Refactoring of the testgen UI into separate module to reduce the compile dependency.
testgen has currently no maintainer.

--- a/key/build.gradle
+++ b/key/build.gradle
@@ -56,6 +56,14 @@ sonarqube {
     }
 }
 
+sonarqube {
+    properties {
+        property "sonar.projectKey", "key-main"
+        property "sonar.organization", "keyproject"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
+}
+
 subprojects {
     apply plugin: "java"
     apply plugin: "java-library"
