--- a/key/settings.gradle
+++ b/key/settings.gradle
@@ -10,4 +10,5 @@ include "key.core.proof_references"
 include "key.core.example"
 include "key.core.symbolic_execution.example"
 include 'keyext.interactionlog'
+include 'keyext.ui.testgen'
 
