--- a/key/build.gradle
+++ b/key/build.gradle
@@ -80,7 +80,7 @@ subprojects {
     }
 
     dependencies {
-        compile     'org.jetbrains:annotations:20.1.0'
+        implementation 'com.google.code.findbugs:jsr305:3.0.2'
         testCompile 'junit:junit:4.12'
         testCompile project(':key.util')
     }
