--- a/key/key.core.proof_references/build.gradle
+++ b/key/key.core.proof_references/build.gradle
@@ -1,10 +1,3 @@
 dependencies {
-    compile project(":key.core")
+    implementation project(":key.core")
 }
-
-/*test {
-    systemProperty "testcases", "src/test/resources/testcase"
-    maxHeapSize = "4g"
-    systemProperty "testcases", "src/test/resources/testcase"
-    filter { includeTestsMatching "AllProofReferencesTests" }
-}*/
