--- a/key/keyext.interactionlog/build.gradle
+++ b/key/keyext.interactionlog/build.gradle
@@ -1,6 +1,8 @@
 dependencies {
-    compile project(":key.ui")
-    compile group: 'com.atlassian.commonmark', name: 'commonmark', version: '0.15.2'
-    compile group: 'com.atlassian.commonmark', name: 'commonmark-ext-gfm-tables', version: '0.15.2'
-    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
+    implementation project(":key.ui")
+    implementation project(":key.core")
+
+    implementation group: 'com.atlassian.commonmark', name: 'commonmark', version: '0.15.2'
+    implementation group: 'com.atlassian.commonmark', name: 'commonmark-ext-gfm-tables', version: '0.15.2'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
 }
