--- a/key/keyext.ui.testgen/build.gradle
+++ b/key/keyext.ui.testgen/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     implementation project(":key.ui")
+    implementation project(":key.core")
     implementation project(":key.core.testgen")
 }
