--- a/KeY4Eclipse/src/plugins/org.key_project.util/.classpath
+++ b/KeY4Eclipse/src/plugins/org.key_project.util/.classpath
@@ -8,6 +8,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/key.ui/build/install/key.ui/lib/annotations-20.1.0.jar"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins">
+		<accessrules>
+			<accessrule kind="accessible" pattern="org.eclipse.jdt.internal/**"/>
+			<accessrule kind="accessible" pattern="**/internal/**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
