update to KeY API
try to fix dependencies

--- a/KeY4Eclipse/src/plugins/org.key_project.core.symbolic_execution/build.properties
+++ b/KeY4Eclipse/src/plugins/org.key_project.core.symbolic_execution/build.properties
@@ -1,9 +1,7 @@
 customBuildCallbacks = customTargets.xml
-source.. = src/,\
-           key.src/
+source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
-               .,\
                about.html,\
                about_files/,\
                plugin.xml
