--- a/KeY4Eclipse/src/plugins/org.key_project.ui/build.properties
+++ b/KeY4Eclipse/src/plugins/org.key_project.ui/build.properties
@@ -2,7 +2,9 @@ customBuildCallbacks = customTargets.xml
 source = src/
 bin.includes = META-INF/,\
                about_files/,\
-               about.html
+               about.html,\
+               .,\
+               bin/              
 jars.compile.order = 
 src.includes = src/
 
