twiddling with build.properties solved the problem

--- a/KeY4Eclipse/src/plugins/org.key_project.ui/build.properties
+++ b/KeY4Eclipse/src/plugins/org.key_project.ui/build.properties
@@ -1,10 +1,5 @@
 customBuildCallbacks = customTargets.xml
-source = src/
 bin.includes = META-INF/,\
-               about_files/,\
-               about.html,\
-               .,\
-               bin/              
-jars.compile.order = 
-src.includes = src/
-
+               src/
+source.. = src
+output.. = bin
