--- a/pom.xml
+++ b/pom.xml
@@ -18,11 +18,6 @@
     <tools.mdsd.dependencies.eclipse-version>2021-06</tools.mdsd.dependencies.eclipse-version>
     <tycho.version>2.2.0</tycho.version>
     <tycho-javadoc.version>2.2.0</tycho-javadoc.version>
-    <org.palladiosimulator.maven.tychotprefresh.version>0.2.6</org.palladiosimulator.maven.tychotprefresh.version>
-    <org.palladiosimulator.maven.tychotprefresh.tpproject.groupId>org.key_project.key4eclipse</org.palladiosimulator.maven.tychotprefresh.tpproject.groupId>
-    <org.palladiosimulator.maven.tychotprefresh.tpproject.artifactId>parent</org.palladiosimulator.maven.tychotprefresh.tpproject.artifactId>
-    <org.palladiosimulator.maven.tychotprefresh.tpproject.version>0.1.0-SNAPSHOT</org.palladiosimulator.maven.tychotprefresh.tpproject.version>
-    <org.palladiosimulator.maven.tychotprefresh.tpproject.classifier>pom</org.palladiosimulator.maven.tychotprefresh.tpproject.classifier>
     <javadoc.args>
       -tag "generated:a:Generated class or method."
       -tag "model:a:EMF model class or method."
@@ -42,7 +37,6 @@
     <javadoc.additional.args>
       -link ${java.api.doc}
     </javadoc.additional.args>
-    <updatesite.aggregator.smtpHost>smtp.ira.uka.de</updatesite.aggregator.smtpHost>
     <tools.mdsd.dependencies.ecoreworkflow-version>0.3.0</tools.mdsd.dependencies.ecoreworkflow-version>
   </properties>
 
@@ -250,10 +244,6 @@
 	    <groupId>org.eclipse.tycho</groupId>
 	    <artifactId>target-platform-configuration</artifactId>
 	  </plugin>
-	  <plugin>
-	    <groupId>org.palladiosimulator</groupId>
-	    <artifactId>tycho-tp-refresh-maven-plugin</artifactId>
-	  </plugin>
 
 	  <!-- Build (general) -->
 	  <plugin>
@@ -421,6 +411,31 @@
 	      <artifactId>maven-compiler-plugin</artifactId>
 	      <version>3.8.1</version>
 	    </plugin>
+
+		<plugin>
+			<groupId>org.eclipse.tycho</groupId>
+			<artifactId>target-platform-configuration</artifactId>
+			<version>${tycho.version}</version>
+			<configuration>
+				<environments>
+					<environment>
+						<os>linux</os>
+						<ws>gtk</ws>
+						<arch>x86_64</arch>
+					</environment>
+					<environment>
+						<os>win32</os>
+						<ws>win32</ws>
+						<arch>x86_64</arch>
+					</environment>
+					<environment>
+						<os>macosx</os>
+						<ws>cocoa</ws>
+						<arch>x86_64</arch>
+					</environment>
+				</environments>
+			</configuration>
+		</plugin>
 
 	    <plugin>
 	      <groupId>org.eclipse.tycho</groupId>
