--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,8 @@
   <version>0.1.0-SNAPSHOT</version>
 
   <properties>
-    <tools.mdsd.dependencies.eclipse-version>2021-12</tools.mdsd.dependencies.eclipse-version>
-    <tycho.version>2.2.0</tycho.version>
+    <tools.mdsd.dependencies.eclipse-version>2022-03</tools.mdsd.dependencies.eclipse-version>
+    <tycho.version>2.7.3</tycho.version>
     <tycho-javadoc.version>2.2.0</tycho-javadoc.version>
     <javadoc.args>
       -tag "generated:a:Generated class or method."
@@ -29,7 +29,7 @@
       -tag 'nooverride:a:Restriction:'
       -tag 'category:a:Category:'
       -link ${java.api.doc}
-      -link http://help.eclipse.org/2020-12/topic/org.eclipse.platform.doc.isv/reference/api
+      -link http://help.eclipse.org/2022-03/topic/org.eclipse.platform.doc.isv/reference/api
       -link https://download.eclipse.org/modeling/emf/emf/javadoc/2.11/
       -link https://download.eclipse.org/modeling/emft/mwe/javadoc/2.9/
     </javadoc.args>
@@ -117,6 +117,17 @@
 
   <build>
     <plugins>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-site-plugin</artifactId>
+  <version>3.12.0</version>
+</plugin>
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-project-info-reports-plugin</artifactId>
+  <version>3.0.0</version>
+</plugin>
+
       <plugin>
         <groupId>org.eclipse.tycho</groupId>
         <artifactId>tycho-compiler-plugin</artifactId>
