--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -20,6 +20,11 @@ jobs:
         distribution: 'temurin'
         cache: maven
 
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@v1.11.0
+      with:
+        maven-version: 3.9.5
+  
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
